force-app/main/default/objects/Candidate__c/Candidate__c.object-meta.xml
<CustomObject>
    <label>候補者</label>
    <nameField>
        <displayFormat>C-{000000000}</displayFormat>
        <label>候補者番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>