force-app/main/default/objects/Candidate__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>住所</label>
    <length>50</length>
    <type>Text</type>
</CustomField>