force-app/main/default/objects/Candidate__c/fields/Education__c.field-meta.xml
<CustomField>
    <fullName>Education__c</fullName>
    <label>学歴</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>小学</fullName>
            </value>
            <value>
                <fullName>中学校</fullName>
            </value>
            <value>
                <fullName>高等学校</fullName>
            </value>
            <value>
                <fullName>大学</fullName>
            </value>
            <value>
                <fullName>院生</fullName>
            </value>
            <value>
                <fullName>博士</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>