force-app/main/default/objects/Candidate__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>メール</label>
    <type>Email</type>
</CustomField>