force-app/main/default/objects/Candidate__c/fields/Post__c.field-meta.xml
<CustomField>
    <fullName>Post__c</fullName>
    <label>郵便番号</label>
    <length>8</length>
    <type>Text</type>
</CustomField>